--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <!-- built files will be auto injected -->
   <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyCRumgMs4so4e_pjNMZe4EEw29ygunZFz8"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCRumgMs4so4e_pjNMZe4EEw29ygunZFz8"></script>
 </body>
 
 </html>
